FrostWire 2.2.9 build 674 - FEB/16/2021
 - New jlibtorrent 1.2.12.0
 - lt:fix loading of DHT node ID from previous session on startup
 - lt:use getrandom(), when available, and fall back to /dev/urandom
 - lt:fix uTP issue acking FIN packets
 - lt:validate HTTPS certificates by default (trackers and web seeds)
 - lt:load SSL certificates from windows system certificate store, to authenticate trackers
 - lt:introduce mitigation for Server Side Request Forgery in tracker and web seed URLs
 - lt:fix error handling for pool allocation failure
 - dev:com.android.tools.build:gradle:4.1.2
 - com.google.android.material:material:1.3.0
 - com.google.android.gms:play-services-ads:19.7.0
 - androidx.media2:media2-widget:1.1.2
 - androidx.media2:media2-player:1.1.2
 - com.mopub:mopub-sdk-*:5.16.0

FrostWire 2.2.8 build 672 - JAN/18/2021
 - Plus: SoundCloud search fixes
 - com.google.android.material:material:1.3.0-rc01 update
 - androidx.browser:browser:1.3.0 update
 - androidx.exifinterface:exifinterface:1.3.2 update
 - com.google.android.gms:play-services-ads:19.6.0 update
 - com.android.billingclient:billing:3.0.2 update
 - com.applovin:applovin-sdk:9.14.12 update

FrostWire 2.2.7 build 670 - DEC/23/2020
 - New jlibtorrent 1.2.11.0
 - libtorrent 1.2.11.0 update (471e772cb7038f1bf5f44c32a09eb42fbb80ee99)
 - lt: upgraded to openssl 1.1.1l
 - lt: fix issue with moving the session object
 - lt: deprecate torrent_status::allocating. This state is no longer used
 - TorrentStatus::State::ALLOCATING enum removed
 - lt: fix bug creating torrents with symbolic links
 - lt: remove special case to save metadata in resume data unconditionally when added throught magnet link
 - lt: fix bugs in mutable-torrent support (reusing identical files from different torrents)
 - lt: fix incorrectly inlined move-assignment of file_storage
 - lt: add session::paused flag, and the ability to construct a session in paused mode
 - lt: fix session-pause causing tracker announces to fail